--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@inject GameForum.Services.Interfaces.IUserService _userService
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -8,25 +9,91 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/GameForum.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        @{
+            string profileImg = "https://static.vecteezy.com/system/resources/previews/009/292/244/non_2x/default-avatar-icon-of-social-media-user-vector.jpg";
+            string userName = User.Identity?.Name;
+
+            if (User.Identity.IsAuthenticated)
+            {
+                var userId = User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
+                var userTask = _userService.GetUserByIdAsync(userId);
+                userTask.Wait(); // not ideal, but acceptable in a Razor view
+                var user = userTask.Result;
+
+                if (user != null)
+                {
+                    profileImg = !string.IsNullOrEmpty(user.ProfileImg) ? user.ProfileImg : profileImg;
+                    userName = user.UserName;
+                }
+            }
+        }
+        <nav class="layout-navbar">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GameForum</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Games" asp-action="Index">Browse</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+                <div class="d-flex justify-content-between align-items-center w-100">
+                    <div class="d-flex align-items-center">
+                        <a class="layout-navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                            <i class="fas fa-gamepad"></i> GameForum
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+                                aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarContent">
+                            <ul class="navbar-nav me-auto mb-0">
+                                <li class="nav-item">
+                                    <a class="layout-nav-link" asp-controller="Games" asp-action="Index">
+                                        <i class="fas fa-search"></i> Browse
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="layout-nav-link" asp-controller="GameRequests" asp-action="Create">
+                                        <i class="fas fa-plus-circle"></i> Request A Game
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div>
+                        <ul class="navbar-nav d-flex flex-row">
+                            @if (User.Identity?.IsAuthenticated ?? false)
+                            {
+                                <li class="nav-item">
+                                    <a class="layout-nav-link" asp-controller="User" asp-action="Profile">
+                                        <img src="@profileImg" alt="Profile" class="layout-profile-img me-2" />
+                                        <span>@userName</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <form method="post" asp-area="Identity" asp-page="/Account/Logout" class="d-inline">
+                                        <button type="submit" class="layout-nav-link btn-link">
+                                            <i class="fas fa-sign-out-alt"></i> Logout
+                                        </button>
+                                    </form>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="layout-nav-link" asp-area="Identity" asp-page="/Account/Register">
+                                        <i class="fas fa-user-plus"></i> Register
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="layout-nav-link" asp-area="Identity" asp-page="/Account/Login">
+                                        <i class="fas fa-sign-in-alt"></i> Login
+                                    </a>
+                                </li>
+                            }
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
