--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,12 +49,12 @@
                             <ul class="navbar-nav me-auto mb-0">
                                 <li class="nav-item">
                                     <a class="layout-nav-link" asp-controller="Games" asp-action="Index">
-                                        <i class="fas fa-search"></i> Browse
+                                        <i class="fas fa-search mx-1"></i> Browse
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="layout-nav-link" asp-controller="GameRequests" asp-action="Create">
-                                        <i class="fas fa-plus-circle"></i> Request A Game
+                                        <i class="fas fa-plus-circle mx-1"></i> Request A Game
                                     </a>
                                 </li>
                             </ul>
@@ -74,7 +74,7 @@
                                 <li class="nav-item">
                                     <form method="post" asp-area="Identity" asp-page="/Account/Logout" class="d-inline">
                                         <button type="submit" class="layout-nav-link btn-link">
-                                            <i class="fas fa-sign-out-alt"></i> Logout
+                                            <i class="fas fa-sign-out-alt mx-1"></i> Logout
                                         </button>
                                     </form>
                                 </li>
@@ -83,12 +83,12 @@
                             {
                                 <li class="nav-item">
                                     <a class="layout-nav-link" asp-area="Identity" asp-page="/Account/Register">
-                                        <i class="fas fa-user-plus"></i> Register
+                                        <i class="fas fa-user-plus mx-1"></i> Register
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="layout-nav-link" asp-area="Identity" asp-page="/Account/Login">
-                                        <i class="fas fa-sign-in-alt"></i> Login
+                                        <i class="fas fa-sign-in-alt mx-1"></i> Login
                                     </a>
                                 </li>
                             }
