--- a/wwwroot/css/profile.css
+++ b/wwwroot/css/profile.css
@@ -409,22 +409,24 @@
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 }
 
-.game-image-container {
+.profile-game-image-container {
     position: relative;
     height: 300px;
     overflow: hidden;
 }
 
-.game-image {
+.profile-game-image {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     transition: var(--transition);
+    background-color: #f0f0f0;
 }
 
-.game-card:hover .game-image {
-    transform: scale(1.1);
+.game-card:hover .profile-game-image {
+    transform: scale(1.18);
 }
+
 .game-title-display {
     color: #BF40BF;
     font-size: 1.5rem;
@@ -433,13 +435,14 @@
     padding: 0 0.5rem;
     transition: var(--transition);
     display: inline-block;
-    text-decoration:none;
+    text-decoration: none;
 }
 
     .game-title-display:hover {
         color: #800080;
         transform: scale(1.02);
     }
+
 .game-overlay {
     position: absolute;
     top: 0;
